# hg_website

./: README.md  build.sh  db.sqlite3  env.example  main.py  manage.py  memory.txt  pyproject.toml  render.yaml  requirements.txt
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py
core/: urls.py  views.py
hg_website/: asgi.py  settings.py  urls.py  wsgi.py
legal/: urls.py  views.py
projects/: admin.py  models.py  urls.py  views.py
projects/management/commands/: add_hero_image.py  add_sample_images.py  add_sample_projects.py  generate_phone_image.py
projects/migrations/: 0001_initial.py
static/css/: contact-protection.css
templates/: base.html
templates/contact/: contact.html
templates/contact/email/: contact_notification.html  contact_notification.txt
templates/core/: about.html  home.html  services.html
templates/legal/: cookie_policy.html  privacy_policy.html
templates/projects/: project_detail.html  project_list.html
