[project]
name = "hg-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.4",
    "django-crispy-forms>=2.4",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "python-decouple>=3.8",
    "requests>=2.32.4",
    "whitenoise>=6.9.0",
]
